# minimalCFD

./: CMakeLists.txt  MinimalCFDLibrary  README.md
include/: grid.h  solver.h
src/: grid.cpp  main.cpp  solver.cpp
test/: test_grid.cpp
